--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Alfa+Slab+One&family=Barlow:wght@300;400&family=Nunito+Sans:wght@200;300&family=Playfair+Display:ital,wght@0,400;0,500;1,500&family=Raleway:ital,wght@0,200;0,400;1,600&family=Roboto+Slab:wght@300;400&family=Sriracha&family=Titillium+Web:ital,wght@0,200;1,300&display=swap");
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+}
+button {
+  outline: none;
+  border: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media screen and (min-width:1100px) {
+  body {
+    cursor: none;
+  }
+  
 }
+video::-webkit-media-controls {
+  display: none;
+}
+
+
+
+.cursor-dot,
+.cursor-dot-outline {
+  pointer-events: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  z-index: 100000000000000000000;
+}
+
+.cursor-dot {
+  width: 8px;
+  height: 8px;
+  background-color:rgba(0, 0, 0, 0.159);
+}
+
+.cursor-dot-outline {
+  width: 60px;
+  height: 60px;
+  background-color: rgba(184, 168, 168, 0.5);
+}
+
+.links-container {
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 40px;
+}
+
+
